revert display attribute to prevent appnav layout breaking

--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -93,6 +93,7 @@
       font-weight: 700;
     }
     ul {
+      display: inline-block;
       li.dropdown {
         &.open {
           ul.dropdown-menu {
